--- a/Sharp64.csproj
+++ b/Sharp64.csproj
@@ -38,33 +38,47 @@
     <ApplicationIcon>Resources\sharp64-icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Bunifu.Core, Version=1.11.5.21, Culture=neutral, PublicKeyToken=e8e24ccd28363fe9" />
+    <Reference Include="Bunifu.Core">
+      <HintPath>bin\Debug\Libraries\Bunifu UI WinForms 1.11.5.21\Bunifu.Core.dll</HintPath>
+    </Reference>
     <Reference Include="Bunifu.UI.WinForm.BunifuShadowPanel">
-      <HintPath>..\..\..\..\Documents\Bunifu Updates Manager\WinForms\Bunifu UI\1.11.5.21\Bunifu.UI.WinForm.BunifuShadowPanel.dll</HintPath>
+      <HintPath>bin\Debug\Libraries\Bunifu UI WinForms 1.11.5.21\Bunifu.UI.WinForm.BunifuShadowPanel.dll</HintPath>
     </Reference>
     <Reference Include="Bunifu.UI.WinForms.BunifuButton">
-      <HintPath>..\..\..\..\Documents\Bunifu Updates Manager\WinForms\Bunifu UI\1.11.5.21\Bunifu.UI.WinForms.BunifuButton.dll</HintPath>
+      <HintPath>bin\Debug\Libraries\Bunifu UI WinForms 1.11.5.21\Bunifu.UI.WinForms.BunifuButton.dll</HintPath>
+    </Reference>
+    <Reference Include="Bunifu.UI.WinForms.BunifuCheckBox">
+      <HintPath>..\Translatr\packages\Libraries\Bunifu UI WinForms 1.11.5.2x\Bunifu.UI.WinForms.BunifuCheckBox.dll</HintPath>
     </Reference>
     <Reference Include="Bunifu.UI.WinForms.BunifuFormDock">
-      <HintPath>..\..\..\..\Documents\Bunifu Updates Manager\WinForms\Bunifu UI\1.11.5.21\Bunifu.UI.WinForms.BunifuFormDock.dll</HintPath>
+      <HintPath>bin\Debug\Libraries\Bunifu UI WinForms 1.11.5.21\Bunifu.UI.WinForms.BunifuFormDock.dll</HintPath>
     </Reference>
     <Reference Include="Bunifu.UI.WinForms.BunifuImageButton">
-      <HintPath>..\..\..\..\Documents\Bunifu Updates Manager\WinForms\Bunifu UI\1.11.5.21\Bunifu.UI.WinForms.BunifuImageButton.dll</HintPath>
+      <HintPath>bin\Debug\Libraries\Bunifu UI WinForms 1.11.5.21\Bunifu.UI.WinForms.BunifuImageButton.dll</HintPath>
     </Reference>
     <Reference Include="Bunifu.UI.WinForms.BunifuLabel">
-      <HintPath>..\..\..\..\Documents\Bunifu Updates Manager\WinForms\Bunifu UI\1.11.5.21\Bunifu.UI.WinForms.BunifuLabel.dll</HintPath>
+      <HintPath>bin\Debug\Libraries\Bunifu UI WinForms 1.11.5.21\Bunifu.UI.WinForms.BunifuLabel.dll</HintPath>
     </Reference>
     <Reference Include="Bunifu.UI.WinForms.BunifuTextbox">
-      <HintPath>..\..\..\..\Documents\Bunifu Updates Manager\WinForms\Bunifu UI\1.11.5.21\Bunifu.UI.WinForms.BunifuTextbox.dll</HintPath>
+      <HintPath>bin\Debug\Libraries\Bunifu UI WinForms 1.11.5.21\Bunifu.UI.WinForms.BunifuTextbox.dll</HintPath>
     </Reference>
     <Reference Include="Bunifu.UI.WinForms.BunifuToolTip">
-      <HintPath>..\..\..\..\Documents\Bunifu Updates Manager\WinForms\Bunifu UI\1.11.5.21\Bunifu.UI.WinForms.BunifuToolTip.dll</HintPath>
+      <HintPath>bin\Debug\Libraries\Bunifu UI WinForms 1.11.5.21\Bunifu.UI.WinForms.BunifuToolTip.dll</HintPath>
     </Reference>
     <Reference Include="Bunifu.UI.WinForms.BunifuUserControl">
-      <HintPath>..\..\..\..\Documents\Bunifu Updates Manager\WinForms\Bunifu UI\1.11.5.21\Bunifu.UI.WinForms.BunifuUserControl.dll</HintPath>
+      <HintPath>bin\Debug\Libraries\Bunifu UI WinForms 1.11.5.21\Bunifu.UI.WinForms.BunifuUserControl.dll</HintPath>
+    </Reference>
+    <Reference Include="Bunifu.UI.WinForms.ToggleSwitch">
+      <HintPath>bin\Debug\Libraries\Bunifu UI WinForms 1.11.5.21\Bunifu.UI.WinForms.ToggleSwitch.dll</HintPath>
+    </Reference>
+    <Reference Include="HotkeyListener">
+      <HintPath>bin\Debug\Libraries\HotkeyListener.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="ProgressControls">
-      <HintPath>..\..\wk\Gumroad Licensing\Gumroad.Licensing\Gumroad.Licensing.Manager\bin\Debug\ProgressControls.dll</HintPath>
+      <HintPath>bin\Debug\Libraries\ProgressControls.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -78,11 +92,15 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Transitions">
-      <HintPath>bin\Debug\Dependencies\Transitions.dll</HintPath>
+      <HintPath>bin\Debug\Libraries\Transitions.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\ISettingsController.cs" />
+    <Compile Include="Controllers\SettingsController.cs" />
     <Compile Include="Helpers\EncoderDecoder.cs" />
+    <Compile Include="Models\AppSettings.cs" />
+    <Compile Include="Models\StartupSettings.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -96,6 +114,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\Settings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Settings.Designer.cs">
+      <DependentUpon>Settings.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
@@ -104,7 +128,11 @@
     <EmbeddedResource Include="Views\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Views\Settings.resx">
+      <DependentUpon>Settings.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="app.config" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
