--- a/Sharp64.csproj
+++ b/Sharp64.csproj
@@ -114,6 +114,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\HotkeyPopup.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\HotkeyPopup.Designer.cs">
+      <DependentUpon>HotkeyPopup.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\Settings.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -127,6 +133,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\HotkeyPopup.resx">
+      <DependentUpon>HotkeyPopup.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Settings.resx">
       <DependentUpon>Settings.cs</DependentUpon>
