Finished the HotkeyPopup feature. Reorganized the visual structure of the settings options. Added HotkeyLists control for viewing the list of supported hotkeys. Fixed an issue with global text selections not being fetched correctly.

--- a/Sharp64.csproj
+++ b/Sharp64.csproj
@@ -106,6 +106,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Views\Controls\HotkeyList.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Views\Controls\HotkeyList.Designer.cs">
+      <DependentUpon>HotkeyList.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -130,6 +136,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Controls\HotkeyList.resx">
+      <DependentUpon>HotkeyList.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
