--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autoupdater.NET.Official" version="1.5.7" targetFramework="net452" />
+  <package id="Costura.Fody" version="1.6.0" targetFramework="net452" developmentDependency="true" />
+  <package id="Fody" version="2.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net452" />
 </packages>
