--- a/Sharp64.csproj
+++ b/Sharp64.csproj
@@ -126,13 +126,13 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="HotkeyListener">
-      <HintPath>bin\Debug\Libraries\HotkeyListener.dll</HintPath>
+      <HintPath>packages\HotkeyListener.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="ProgressControls">
-      <HintPath>bin\Debug\Libraries\ProgressControls.dll</HintPath>
+      <HintPath>packages\ProgressControls.dll</HintPath>
     </Reference>
     <Reference Include="System">
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.5.2\System.dll</HintPath>
@@ -143,7 +143,7 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="Transitions">
-      <HintPath>bin\Debug\Libraries\Transitions.dll</HintPath>
+      <HintPath>packages\Transitions.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
