--- a/Sharp64.csproj
+++ b/Sharp64.csproj
@@ -121,6 +121,9 @@
     <Reference Include="Bunifu_UI_v1.5.3, Version=1.5.3.0, Culture=neutral, PublicKeyToken=e8e24ccd28363fe9, processorArchitecture=MSIL">
       <HintPath>packages\Bunifu.UI.WinForms.2.0.2-Beta\lib\Bunifu_UI_v1.5.3.dll</HintPath>
     </Reference>
+    <Reference Include="FontsInstaller, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\FontsInstaller.1.3.0\lib\FontsInstaller.dll</HintPath>
+    </Reference>
     <Reference Include="HotkeyListener">
       <HintPath>packages\HotkeyListener.dll</HintPath>
     </Reference>
