--- a/packages.config
+++ b/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Autoupdater.NET.Official" version="1.5.7" targetFramework="net452" />
   <package id="Bunifu.UI.WinForms" version="2.0.2-Beta" targetFramework="net452" />
+  <package id="FontsInstaller" version="1.3.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net452" />
 </packages>
